src/main/java/ru/projects/test_task_aikamsoft/utils/error/CriteriaNotFoundException.java
package ru.projects.test_task_aikamsoft.utils.error;

public class CriteriaNotFoundException extends Exception{
    public CriteriaNotFoundException(String message){
        super(message);
    }
}
